2007-08-21  Luca Cavalli <loopback@slackit.org>

	* file-transfer-dialog.c: (format_uri_for_display),
	(file_transfer_dialog_set_prop): add new function similar to
	gnome_vfs_format_uri_for_display but that hides the password if
	needed. Taken from gedit by Paolo Maggi. Closes bug #339551.

2007-08-20  Matthias Clasen <mclasen@redhat.com>

	Fixes #467552

	* gnome-theme-info.c (gnome_theme_init): avoid double-freed for cursor
	theme infos.

2007-08-17  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_fonts): fix double-free, and make
	the builtins non-static to save relocations

2007-08-17  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_fonts): don't leak the cursor font

2007-08-12  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (create_folder_icon),
	(create_gtk_theme_pixbuf), (handle_bytes), (message_from_capplet),
	(message_from_child), (read_pixbuf), (generate_theme_thumbnail):
	various small tweaks and optimizations

2007-08-08  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (create_meta_theme_pixbuf):
	Create the icon theme representative before the GTK stock button. Since
	we explicitly set the icon theme for the first, this ensures both are
	drawn with the same icon theme. Before it was possible when changing
	icon themes (especially on slower machines) that the GtkSettings were
	not yet updated and the stock button still used the old theme.

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_theme): make sure we don't run off
	the end of the array

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_theme),
	(gnome_theme_cursor_info_free): copy the name for the default cursor,
	too, lest we crash on free, and only unref the thumbnail if we have
	one

2007-08-04  Denis Washington  <denisw@svn.gnome.org>

	* gnome-theme-info.c: (read_cursor_theme), (look_for_cursor_theme):
	Also load the "default" cursor theme as GnomeThemeCursorInfo so